--- a/index.html
+++ b/index.html
@@ -225,10 +225,11 @@
                             <h5>2020 - Present</h5>
                             <p><em>Vidya Book House, Kasaragod, Kerala</em></p>
                             <ul>
-                                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                                <li>Lead in the E-Commerce services, and as a technical field in computer and production communication materials</li>
+                                
+                                <li>Learnt to diagnose, troubleshoot and resolve technical issues.</li>
+                                <li>Learnt to communicate technical information effectively to both technical and non-technical colleagues./li>
+                         
                             </ul>
                         </div>
                         <div>
