--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 <li>Lead in the E-Commerce services, and as a technical field in computer and production communication materials</li>
                                 
                                 <li>Learnt to diagnose, troubleshoot and resolve technical issues.</li>
-                                <li>Learnt to communicate technical information effectively to both technical and non-technical colleagues./li>
+                                <li>Learnt to communicate technical information effectively to both technical and non-technical colleagues.</li>
                          
                             </ul>
                         </div>
