--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/logo.png" rel="icon">
+    <link href="assets/img/jo.jpg" rel="icon">
     <link href="assets/img/logo.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -226,10 +226,10 @@
                             <p><em>Vidya Book House, Kasaragod, Kerala</em></p>
                             <ul>
                                 <li>Lead in the E-Commerce services, and as a technical field in computer and production communication materials</li>
-                                
+
                                 <li>Learnt to diagnose, troubleshoot and resolve technical issues.</li>
                                 <li>Learnt to communicate technical information effectively to both technical and non-technical colleagues.</li>
-                         
+
                             </ul>
                         </div>
                         <div>
