--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <a href="https://www.facebook.com/joyal.jose.7921975?mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com/invites/contact/?i=1up138xle1k90&utm_content=4038ab8" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="https://github.com/joyaljosz" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-                <a href="https://www.linkedin.com/in/joyal-jose-269569215" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/joyal-josz" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
         </div>
     </section>
@@ -128,16 +128,16 @@
                     <div class="col-lg-6">
 
                         <div class="progress">
-                            <span class="skill">HTML <i class="val">90%</i></span>
+                            <span class="skill">HTML <i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">CSS <i class="val">80%</i></span>
+                            <span class="skill">CSS <i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
@@ -167,9 +167,9 @@
                         </div>
 
                         <div class="progress">
-                            <span class="skill">Photoshop<i class="val">55%</i></span>
+                            <span class="skill">C/C++<i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
@@ -324,7 +324,7 @@
                 <a href="https://www.facebook.com/joyal.jose.7921975?mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com/invites/contact/?i=1up138xle1k90&utm_content=4038ab8" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="https://github.com/joyaljosz" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-                <a href="https://www.linkedin.com/in/joyal-jose-269569215" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/joyal-josz" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
         </div>
     </footer>
