--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>JoyalJosz | Portfolio</title>
+    <title>JoyalJosz |  Portfolio</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -78,7 +78,7 @@
 
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="assets/img/jo.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/coat.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content">
 
