--- a/index.html
+++ b/index.html
@@ -233,6 +233,20 @@
                             </ul>
                         </div>
                         <div>
+                        <div class="col-lg-6">
+                        <h3 class="resume-title">Additional Activities</h3>
+                        <div class="resume-item">
+                            <h4>Interets</h4>
+                            <h5></h5>
+                            <p><em></em></p>
+                            <ul>
+                                <li>Represented institution in south zone football tournament.</li>
+                                
+                                <li>Represented as a volunteer in National Service Scheme (NSS).</li>
+                         
+                            </ul>
+                        </div>
+                        <div>
 
                         </div>
                     </div>
