--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                             <div class="col-lg-6">
                                 <ul>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>15 May 2000</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://joyaljosz.github.io/</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://joyaljosz.github.io/portfolio/</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-9567161231</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Sriperumbudur, Chennai</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chennai, India</span></li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
@@ -229,7 +229,7 @@
                                 
                                 <li>Learnt to diagnose, troubleshoot and resolve technical issues.</li>
                                 <li>Learnt to communicate technical information effectively to both technical and non-technical colleagues.</li>
-                                <li><a href="https://github.com/joyaljosz/Job-Recruitement-System" target="_blank">Github Link</a> </li>
+                                <a href="https://github.com/joyaljosz/Job-Recruitement-System" target="_blank">Github Link</a>
 
                             </ul>
                         </div>
