--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
                             <h4>Master of Computer Science &amp; Data Science</h4>
                             <h5>2021 - Present</h5>
                             <p><em>Rajiv Gandhi National Institute Of Youth Development (RGNIYD), Sriperumbudur, Chennai</em></p>
-                            <p>Specialised in Data Science field</p>
+                            <p>Relevant Course Work: Data Structures and Algorithm, Programming in Python & R, SQL for Data Science, Data Visualization, Machine Learning, Deep Learning.</p>
                         </div>
                         <div class="resume-item">
                             <h4>Bachelor of Computer Application (BCA)</h4>
                             <h5>2018 - 2021</h5>
-                            <p><em>GreenWoods Arts and Science College, Kasaragod</em></p>
-                            <p>Specialised in the field of Computer Applications under Kannur University </p>
+                            <p><em>GreenWoods Arts and Science College, Kasaragod (Kannur University)</em></p>
+                            <p>Specialised in the field of Computer Applications, C & C++ Programming Language, MySql, Web Application Development.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -247,7 +247,7 @@
                                  <li>Technologies Used: HTML, CSS, JavaScript, PHP, Xampp</li>
                                  <li>Team: The project was a team work consist of four members while my role is the front end development of the website.</li>
                                 <li>Soft Skills: Time Management, Teamwork, Presentation skills, Report writing.</li>
-                                 <li><a href="https://github.com/joyaljosz/Job-Recruitement-System" target="_blank">https://github.com/joyaljosz/Job-Recruitement-System</a></li>
+                                 <li><a href="https://github.com/joyaljosz/Job-Recruitement-System" target="_blank">Github Link: https://github.com/joyaljosz/Job-Recruitement-System</a></li>
                                 
                             </ul>
                         </div>
@@ -277,7 +277,7 @@
                             <div class="address">
                                 <i class="bi bi-geo-alt"></i>
                                 <h4>Location:</h4>
-                                <p>Sriperumbudur, Chennai</p>
+                                <p>Chennai, India</p>
                             </div>
 
                             <div class="email">
