--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <ul>
                 <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
                 <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+                <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Skills</span></a></li>
                 <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                 <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
             </ul>
@@ -209,7 +210,7 @@
                             <h4>Master of Computer Science &amp; Data Science</h4>
                             <h5>2021 - Present</h5>
                             <p><em>Rajiv Gandhi National Institute Of Youth Development (RGNIYD), Sriperumbudur, Chennai</em></p>
-                            <p>Relevant Course Work: Data Structures and Algorithm, Programming in Python & R, SQL for Data Science, Data Visualization, Machine Learning, Deep Learning.</p>
+                            <p><b>Relevant Course Work:</b> Data Structures and Algorithm, Programming in Python & R, SQL for Data Science, Data Visualization, Machine Learning, Deep Learning.</p>
                         </div>
                         <div class="resume-item">
                             <h4>Bachelor of Computer Application (BCA)</h4>
