--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <a href="https://www.instagram.com/invites/contact/?i=1up138xle1k90&utm_content=4038ab8" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="https://github.com/joyaljosz" target="_blank" class="github"><i class="bx bxl-github"></i></a>
                 <a href="https://www.linkedin.com/in/joyal-josz" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.kaggle.com/joyaljosz11" target="_blank" class="kaggle"><i class="bx bxl-kaggle"></i></a>
             </div>
         </div>
     </section>
@@ -379,6 +380,7 @@
                 <a href="https://www.instagram.com/invites/contact/?i=1up138xle1k90&utm_content=4038ab8" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="https://github.com/joyaljosz" target="_blank" class="github"><i class="bx bxl-github"></i></a>
                 <a href="https://www.linkedin.com/in/joyal-josz" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.kaggle.com/joyaljosz11" target="_blank" class="kaggle"><i class="bx bxl-kaggle"></i></a>
             </div>
         </div>
     </footer>
