--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
             <h1>Joyal Jose T S</h1>
-            <p>I'm <span class="typed" data-typed-items="an Aspiring Data Scientist, Front-End Web Developer, a Fresher"></span></p>
+            <p>I'm <span class="typed" data-typed-items="an Aspiring Data Scientist, Web Developer, a Freelancer"></span></p>
             <div class="social-links">
                 <a href="https://twitter.com/JoyalJosz?t=BPNkz0kgffaSWSl5btt7wA&s=35" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.facebook.com/joyal.jose.7921975?mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com/invites/contact/?i=1up138xle1k90&utm_content=4038ab8" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="https://github.com/joyaljosz" target="_blank" class="github"><i class="bx bxl-github"></i></a>
                 <a href="https://www.linkedin.com/in/joyal-josz" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                <a href="https://www.kaggle.com/joyaljosz11" target="_blank" class="kaggle"><i class="bx bxl-kaggle"></i></a>
+                <a href="https://www.kaggle.com/joyaljosz11" target="_blank" class="kaggle"><i class="bx bxl-Kaggle"></i></a>
             </div>
         </div>
     </section>
@@ -75,7 +75,7 @@
 
                 <div class="section-title">
                     <h2>About</h2>
-                    <p>Masters student in Computer Science with specialization in the field of Data Science.</p>
+                    <p>I'm a data enthusiast with a Master's degree, blending statistical wizardry and tech skills to fuel data-driven success.</p>
                 </div>
 
                 <div class="row">
@@ -87,24 +87,21 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>15 May 2000</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>joyaljosz.github.io/portfolio/</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-9567161231</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chennai, India</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Kaggle:</strong><a href="https://www.kaggle.com/joyaljosz11"> Profile Link</a></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <a href="tel:9567161231">Mobile</a></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kasaragod, Kerala, India</span></li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>joyaljosz11@gmail.com</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:joyaljosz11@gmail.com">Drop a mail</a></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                                 </ul>
                             </div>
                         </div><br />
                         <p>
-                            As a recent master's degree graduate in data science, I have a strong foundation in statistical analysis, machine learning, and data visualization. With hands-on experience in data analysis projects in the field, I am skilled in using
-                            tools such as Python, R, and SQL. My goal is to use my technical skills and passion for data to contribute to organizations as a data scientist, solving complex problems and making data-driven decisions.
+                            I just wrapped up my master's degree in data science not too long ago. I've got a solid grasp on stuff like crunching numbers, working with machine learning, and creating cool data visualizations. I've actually gotten my hands dirty with real data projects, using tools like Python, R, and SQL. My whole deal is that I want to put these skills to good use in companies as a data scientist. You know, tackling those tricky problems with data and helping them make smart choices based on it.
                         </p>
                     </div>
                 </div>
@@ -119,9 +116,7 @@
 
                 <div class="section-title">
                     <h2>Skills</h2>
-                    <p> Results-driven Master's degree student in Data Science with a strong background in statistical analysis and machine learning. Proficient in Python, SQL, and data visualization tools. Skilled in solving complex data problems and creating
-                        insights to drive business decisions. Experienced in working with large datasets and conducting data analysis to uncover trends and patterns. Seeking an opportunity to utilize my skills and knowledge to contribute to a dynamic
-                        data science team.
+                    <p> I'm a results-oriented grad student with a Data Science Master's under my belt. I've got a solid foundation in crunching numbers and using machine learning to make things happen. When it comes to tech, Python, SQL, and data viz tools are my jam. I'm all about cracking tough data puzzles and turning them into business gold. I've handled big datasets like a pro, digging out trends and patterns left and right. Right now, I'm on the hunt for a spot in a cool data science crew where I can put my skills to work and make things happen.
                     </p>
                 </div>
 
@@ -130,14 +125,14 @@
                     <div class="col-lg-6">
 
                         <div class="progress">
-                            <span class="skill">HTML <i class="val">80%</i></span>
+                            <span class="skill">HTML <i class="val">90%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">CSS <i class="val">70%</i></span>
+                            <span class="skill">CSS <i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -150,7 +145,7 @@
                             </div>
                         </div>
                          <div class="progress">
-                            <span class="skill">PHP<i class="val">70%</i></span>
+                            <span class="skill">PHP<i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -161,7 +156,7 @@
                     <div class="col-lg-6">
 
                         <div class="progress">
-                            <span class="skill">Python<i class="val">70%</i></span>
+                            <span class="skill">Python<i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -204,8 +199,7 @@
 
                 <div class="section-title">
                     <h2>Resume</h2>
-                    <p>To secure a challenging and growth-oriented position in the field of data science, utilizing my advanced analytical skills, technical expertise, and education in statistics and machine learning to drive business solutions and improve
-                        decision-making processes.</p>
+                    <p>I'm on a mission to snag a role that's not just your run-of-the-mill gig. I'm talking about something that's gonna push me and let me grow. My game plan is to bring my A-game in data science, armed with top-notch analytical skills, tech know-how, and a solid background in stats and machine learning. I'm all about turning data into smart business moves and taking decision-making to the next level. Let's make things happen!</p>
                 </div>
 
                 <div class="row">
@@ -292,9 +286,7 @@
                             <p><em>Associated with Rajiv Gandhi National Institute Of Youth Development (RGNIYD)</em></p>
                             <ul>
                                 <li><b>Project Title:</b>Automated Golf Swing Analysis: A Computer Vision Approach</li>
-                                <li><b>Description:</b>This project utilizes computer vision techniques to automate the analysis of golf swings. By capturing and processing video footage, 
-                                    the system extracts key swing parameters, such as speed,posture,alignment,and the club path, to provide objective feedback on a golfer's technique.
-                                    This approach aims to enhance the accuracy,efficiency,and accessibility of golf swing analysis for both amateur and professional golfers. </li>
+                                <li><b>Description:</b>Automated golf swing analysis: A computer vision approach is a project that utilizes computer vision techniques to automate the analysis of golf swings. </li>
                                 <li><b>Technologies Used:</b> Python, Deep Learning Frameworks, OpenCV</li>
                             </ul>
                         </div>
@@ -310,14 +302,21 @@
                             </ul>
                         </div>
                         <div class="resume-item">
-                            <h4>Prediction Test - Self</h4>
+                            <h4>Analysis Project - Self</h4>
                             <p><em>Mini Project</em></p>
                             <ul>
-                                <li><b>Project Title:</b> Gold Price Prediction</li>
-                                <li><b>Description:</b>Gold price prediction using Artificial Neural Network with a built-in Kaggle dataset.</li>
+                                <li><b>Project 1:</b> Gold Price Prediction</li>
+                                <!-- <li><b>Description:</b>Gold price prediction using Artificial Neural Network with a built-in Kaggle dataset.</li>
                                 <li><b>Technologies Used:</b> Jupyter Notebook, Python</li>
-                                <li><b>Github Link:</b><a href="https://github.com/joyaljosz/Gold_Price_Prediction" target="_blank"> https://github.com/joyaljosz/Gold_Price_Prediction</a></li>
+                                <li><b>Github Link:</b><a href="https://github.com/joyaljosz/Gold_Price_Prediction" target="_blank"> https://github.com/joyaljosz/Gold_Price_Prediction</a></li> -->
+                                <li><b>Project 2:</b> Twitter Sentiment Analysis</li>
+                                <li><b>Project 3:</b> Credit Card Fraud Detection</li>
+
                             </ul>
+                        </div>
+                        <div class="resume-item">
+                            <h4>For more details about projects</h4>
+                            <a href="https://www.datascienceportfol.io/joyaljose" target="_blank"><button>Click Here</button></a>
                         </div>
                     </div>
                 </div>
@@ -348,13 +347,13 @@
                             <div class="email">
                                 <i class="bi bi-envelope"></i>
                                 <h4>Email:</h4>
-                                <p>joyaljosz11@gmail.com</p>
+                                <a href="mailto:joyaljosz11@gmail.com">Drop a mail</a>
                             </div>
 
                             <div class="phone">
                                 <i class="bi bi-phone"></i>
                                 <h4>Call:</h4>
-                                <p>+91-9567161231</p>
+                                <a href="tel:9567161231">Mobile</a>
                             </div>
 
                         </div>
