--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <div class="col-lg-6">
 
                         <div class="progress">
-                            <span class="skill">HTML/CSS <i class="val">90%</i></span>
+                            <span class="skill">Python<i class="val">80%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -144,15 +144,15 @@
                         </div> -->
 
                         <div class="progress">
-                            <span class="skill">JavaScript <i class="val">75%</i></span>
+                            <span class="skill">SQL <i class="val">85%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                          <div class="progress">
-                            <span class="skill">PHP<i class="val">80%</i></span>
+                            <span class="skill">Data Analysis<i class="val">90%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
@@ -161,16 +161,16 @@
                     <div class="col-lg-6">
 
                         <div class="progress">
-                            <span class="skill">Python<i class="val">80%</i></span>
+                            <span class="skill">Microsoft Power BI<i class="val">85%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">SQL<i class="val">80%</i></span>
+                            <span class="skill">Big Data Analytics<i class="val">70%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
@@ -184,9 +184,9 @@
                         
                         
                          <div class="progress">
-                            <span class="skill">R<i class="val">70%</i></span>
+                            <span class="skill">Web Development<i class="val">75%</i></span>
                             <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
@@ -205,6 +205,9 @@
                 <div class="section-title">
                     <h2>Resume</h2>
                     <p>"I am dedicated to pursuing a challenging and growth-oriented role in the field of data science, where I can leverage my exceptional analytical skills, technical proficiency, and extensive background in statistics and machine learning. My primary goal is to transform data into strategic business insights, elevating decision-making processes to new heights."</p>
+                    <a href="/images/myw3schoolsimage.jpg" download>
+                        <img src="/images/myw3schoolsimage.jpg" alt="W3Schools">
+                    </a>
                 </div>
 
                 <div class="row">
