--- a/index.html
+++ b/index.html
@@ -205,9 +205,8 @@
                 <div class="section-title">
                     <h2>Resume</h2>
                     <p>"I am dedicated to pursuing a challenging and growth-oriented role in the field of data science, where I can leverage my exceptional analytical skills, technical proficiency, and extensive background in statistics and machine learning. My primary goal is to transform data into strategic business insights, elevating decision-making processes to new heights."</p>
-                    <a href="/images/myw3schoolsimage.jpg" download>
-                        <img src="/images/myw3schoolsimage.jpg" alt="W3Schools">
-                    </a>
+                        <br>
+                    <a href="assets/JoyalJose_CV.pdf" download>Click here to download Resume</a>
                 </div>
 
                 <div class="row">
