--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
                             <h4>Deep Learning MasterClass, Udemy</h4>
                             <p>Learnt about Complete Life Cycle of a Deep Learning Project. Implement different Neural networks using Tensorflow & Keras.</p>
                         </div><br>
-                        <div class="resume-item pb-0">
+                        <!-- <div class="resume-item pb-0">
                             <h4>Modern PHP Web Development w/ MySql- Github & Herouku, Udemy</h4>
                             <p>This certification course provide the opportunity to study different tools for the web development.</p>
-                        </div>
+                        </div> -->
                         <!-- <div class="resume-item pb-0">
                             <h4>Microsoft PowerBI Basics, Udemy</h4>
                             <p><em>Learn about Microsoft PowerBI.</em></p>
