--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
-            <h1>Joyal Jose T S</h1>
+            <h1>Joyal Jose</h1>
             <p>I'm <span class="typed" data-typed-items="an Aspiring Data Scientist, Data Analysis Aficionado, a Data Science Enthusiast"></span></p>
             <div class="social-links">
                 <!-- <a href="https://twitter.com/JoyalJosz?t=BPNkz0kgffaSWSl5btt7wA&s=35" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a> -->
